--- a/goflow2-deployment.yaml
+++ b/goflow2-deployment.yaml
@@ -19,12 +19,15 @@ spec:
         image: ghcr.io/netsampler/goflow2:v0.6.2
         imagePullPolicy: IfNotPresent
         args:
-          - "-format.kafka"
-          - "-kafka.brokers=kafka:9092"
-          - "-kafka.topic=goflow"
-          - "-kafka.version=2.0.0"
-          - "-kafka.compression=gzip"
-          - "-kafka.flushinterval=1000"
+          - -transport.kafka.brokers=kafka-broker-0.kafka-broker-headless.default.svc.cluster.local:9092
+          - -transport=kafka
+          - -transport.kafka.topic=flows
+          #- "-format.kafka"
+          #- "-kafka.brokers=kafka:9092"
+          #- "-kafka.topic=goflow"
+          #- "-kafka.version=2.0.0"
+          #- "-kafka.compression=gzip"
+          #- "-kafka.flushinterval=1000"
           # Uncomment below if using ClickHouse too:
           # - "-format.clickhouse"
           # - "-config=/conf/clickhouse.yaml"
